Bearer token Authentication implemented, added api and db methods amend: removed image_paths db
